# relic

./: .gitignore  .pre-commit-config.yaml  README.md  aggregate.sh  aggregate_pruning.py  cross_sweep.slurm  environment.yaml  eval.sh  eval.slurm  eval_checkpoint.py  finetune.py  finetune_notrl.py  gp.py  l0.py  loss_curves_baseline.pkl  loss_curves_chomsky.pkl  main.py  make_ablations.sh  merge.slurm  merge.yml  modeling_ppt_neox.py  plots.ipynb  prune.py  prune.sh  prune.slurm  pyproject.toml  run.py  run.sh  run.slurm  run_exp2.sh  save_activations.sh  save_avg_activations.py  scaling_laws.sh  slerp.py  synthetic_data.slurm  utils.py
data/: batch_file_response.jsonl  large_subset.txt  sample.cfg  sample_trim_20241018115328.cfg  sample_trim_20241018115328_batch_600.jsonl  sample_trim_20241018115328_negative_100.txt  sample_trim_20241018115328_negative_300.txt  sample_trim_20241018115328_negative_5.txt  sample_trim_20241018115328_openai_batched_10.jsonl  sample_trim_20241018115328_openai_batched_600.jsonl  sample_trim_20241018115328_positive_100.txt  sample_trim_20241018115328_positive_300.txt  sample_trim_20241018115328_positive_5.txt  sample_trim_20241018115328_prompts_10.tsv  sample_trim_20241018115328_prompts_600.tsv  simply_typed_lambda_calculus.cfg  small_subset.txt  times.regex  untyped_lambda_calculus.cfg  url.regex
data/grammars/grammar_20250218222557/: batch_4d4b2cce9aa4a873b8b6dc5aa029a335_inputs.jsonl  batch_4d4b2cce9aa4a873b8b6dc5aa029a335_results.jsonl  batch_67dc618958348190a0094f6b338da523_inputs.jsonl  batch_67dc618958348190a0094f6b338da523_results.jsonl  batch_6807b65e77f08190b03181ed61bc2276_results.jsonl  batch_6807d11667ec8190b24b0d40f05a4409_results.jsonl  batch_680822d813488190a52a8a901f675ead_inputs.jsonl  batch_697a37f38171fcacb67515f5a16f6de5_inputs.jsonl  batch_697a37f38171fcacb67515f5a16f6de5_results.jsonl  batch_de6869dbf23dda355271451c75575a6f_inputs.jsonl  batch_de6869dbf23dda355271451c75575a6f_results.jsonl  filtered_samples.csv  filtered_samples_stats.json  grammar_20250218222557.cfg  grammar_20250218222557_deepseek-ai_DeepSeek-R1-Distill-Qwen-7B_batched_0-shot.jsonl  grammar_20250218222557_google_gemma-3-1b-it_batched_0-shot.jsonl  grammar_20250218222557_google_gemma-3-4b-it_batched_0-shot.jsonl  grammar_20250218222557_gpt-4.1-mini_batched_0-shot.jsonl  grammar_20250218222557_gpt-4.1_batched_0-shot.jsonl  grammar_20250218222557_o3_batched_0-shot.jsonl  grammar_20250218222557_o4-mini_batched_0-shot.jsonl  grammar_stats.json
data/grammars/grammar_20250222140539/: batch_15aa38e3ed4ee6dfabfc96833b530c06_inputs.jsonl  batch_15aa38e3ed4ee6dfabfc96833b530c06_results.jsonl  batch_450f9fe5030e59b8492115d0e3900c04_inputs.jsonl  (+19 more)
notebooks/: aesthetics.py  analysis.ipynb  compression.ipynb  generate_testing.ipynb  new_analysis.ipynb  ngrams.ipynb  nltk.ipynb  reponse_classification.ipynb  sample_len.ipynb  sample_stats.ipynb  sample_trim_20241018115328-4o_mini_2024_07_18_eval.tsv  scfg_analysis.ipynb  test_api.ipynb  test_gemini.ipynb  tokens.ipynb
notebooks/data/: batch_6822a0de128881908790210c526cf470-classification.jsonl  gpt_192_subsample.csv
scripts/: 4.1-mini_large_upload.zsh  4.1-mini_upload.zsh  4.1-nano_large_upload.zsh  4.1-nano_upload.zsh  4.1_large_upload.zsh  4.1_small_upload.zsh  4o-mini_upload.zsh  batch_prompting.py  download.py  dsr1.slurm  gemma_3_12b.slurm  gemma_3_1b.slurm  gemma_3_27b.slurm  gemma_3_4b.slurm  gen_batch.py  gen_g_grid.slurm  gen_g_rand.slurm  gen_grammar.py  gen_samples.py  generate.py  generate_samples.py  gridsearch.bash  gridsearch.slurm  large_subset_download.zsh  local.py  move_grammars.zsh  o3_large_upload.zsh  o3_small_upload.zsh  o3_upload.zsh  o4-mini_large_upload.zsh  o4-mini_small_upload.zsh  partitions.py  preprocess_cogs.py  sample.py  sample_generation_from_model.sh  sample_grammars_for_generative_eval.sh  singr.bash  singw.bash  small_subset_4omini_download.zsh  small_subset_4omini_upload.zsh  (+4 more)
src/: cfg.py  grammar.py  sample.py  trainer.py  utils.py
src/crasp/: grammar.py
src/data/: data.py  utils.py
src/formal_gym/: grammar.py  metagrammar.py  metaxbargrammar.py  prompt.py  sample.py  scfg.py  test.py  xbar_io.py  xbar_schemas.py
src/meta/: grammar_dataset.py  meta_grammar.py
src/utils/: __init__.py
test/: test_cyclicity.py  test_metagrammar.py  test_scfg.py  test_xbar.py
(+4323 files in other folders)
