[project]
name = "formal-gym"
version = "0.0.1"
description = "A tool to generate formal grammars."
readme = "README.md"
requires-python = ">= 3.12, < 3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Jackson Petty", email = "research@jacksonpetty.org" },
    { name = "Michael Hu", email = "myh2014@nyu.edu" }
]

dependencies = [
    "anthropic>=0.37.1",
    "exrex>=0.11.0",
    "fire>=0.6.0",
    "google-generativeai>=0.8.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbstripout>=0.7.1",
    "nltk>=3.9.1",
    "openai>=1.52.0",
    "pandas>=2.2.3",
    "polars>=1.6.0",
    "pyrootutils>=1.0.4",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "wandb>=0.18.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pre-commit"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"
