[project]
name = "formal-gym"
version = "0.0.1"
description = "A tool to generate formal grammars."
readme = "README.md"
requires-python = ">= 3.12, < 3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Jackson Petty", email = "research@jacksonpetty.org" },
    { name = "Michael Hu", email = "myh2014@nyu.edu" },
    { name = "William Merrill", email = "willm@nyu.edu" },
    { name = "Wentao Wang", email = "wentao.wang@nyu.edu" },
]

dependencies = [
    "datasets>=3.3.2",
    "exrex>=0.11.0",
    "fire>=0.6.0",
    "hatchling>=1.27.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lark>=1.2.2",
    "nbstripout>=0.7.1",
    "nltk>=3.9.1",
    "openai>=1.52.0",
    "pandas>=2.2.3",
    "pyrootutils>=1.0.4",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "statsmodels>=0.14.4",
    "tables>=3.10.2",
]

[dependency-groups]
gpu = [
    "accelerate>=1.4.0",
    "torch>=2.6.0",
    "transformers>=4.51.1",
    "vllm>=0.8.5.post1",
    "wandb>=0.18.1",
    "flash-attn>=2.7.4.post1;           platform_system == 'Linux' and platform_machine == 'x86_64'",
    "flashinfer-python>=0.2.5;          platform_system == 'Linux' and platform_machine == 'x86_64'",
    "xformers>=0.0.29.post2;            platform_system == 'Linux' and platform_machine == 'x86_64'",
    "vllm>=0.8.5.post1;                 platform_system == 'Linux' and platform_machine == 'x86_64'",
]
dev = [
    "pre-commit>=3.8.0",
    "ty>=0.0.1a3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = ["data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"
